# llmstart-agent

./: .env.example  .gitignore  Makefile  README.md  mcp.json  project-draft.md
.cursor/rules/methodology/: 00-methodology.mdc
.cursor/skills/dataset-builder/: SKILL.md
.cursor/skills/dataset-reviewer/: SKILL.md
.cursor/skills/schema-guided-reasoning/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.methodology/: GLOSSARY.md  METHODOLOGY.md  README.md
.methodology/ci/: git-conventions.md  gitignore-additions.txt
.methodology/ci/github-actions/: default.yml.template
.methodology/onboarding/: continue-project.md  existing-code.md  from-scratch.md
.methodology/rules/: 10-conventions.mdc  20-workflow.mdc  40-skills-router.mdc
.methodology/templates/adrs/: adr-template.md
.methodology/templates/concept/: api-contracts-template.md  architecture-template.md  data-model-template.md  idea-template.md  integrations-template.md  vision-template.md
.methodology/templates/roadmap/: roadmap-template.md
.methodology/templates/specs/: spec-template.md
.methodology/templates/sprints/: sprint-template.md
.methodology/templates/tasks/: demo-template.md  plan-template.md  summary-template.md
backend/: README.md  pyproject.toml
backend/app/: factory.py  main.py
backend/app/agent/: product_filter.py  prompts.py  react_runner.py  streaming_callbacks.py
backend/app/api/routes/: chat.py  health.py  products.py  ready.py
backend/app/api/schemas/: chat.py  product.py  products.py  ready.py  sse.py
backend/app/core/: config.py  exceptions.py
backend/app/mcp_client/: __init__.py  client.py  context.py  runtime.py  sync_tools.py  tool_adapter.py  tool_registry.py  tool_schemas.py
backend/app/observability/: __init__.py  langfuse.py
backend/app/services/: agent_service.py  catalog_service.py  channel_formatter.py  message_chunker.py  price_formatter.py  session_store.py  sse_formatter.py  sse_pacing.py
backend/tests/: conftest.py  test_channel_formatter.py  test_chat.py  test_chat_sse.py  test_health.py  test_langfuse.py  test_langfuse_live.py  test_message_chunker.py  test_price_formatter.py  test_product_filter.py  test_products.py  test_reasoning.py  test_session_store.py  test_sync_tools.py
bot/: README.md  pyproject.toml
bot/bot/: __init__.py  config.py  main.py
bot/bot/api/: core_client.py
bot/bot/handlers/: message.py  start.py
bot/bot/services/: session_store.py  start_payload.py
bot/bot/utils/: messaging.py  price.py
bot/tests/: conftest.py  test_core_client.py  test_main_smoke.py  test_messaging.py  test_session_store.py  test_start_payload.py
data/: leads.txt  payments.json
data/b2b/: corporate-training.md  custom-development.md
data/b2c/: catalog.json  courses-overview.md  faq-b2c.md
data/real_data/b2b/: corporate-training.md
datasets/: dataset-plan.md  summary.md  v1-freeze.md  v2-freeze.md  validation-report-v2.md  validation-report.md  validation-sample-review.md  validation-sample-v2.md  validation-sample.md
datasets/b2b/v1/: dataset.jsonl  extraction.jsonl  sample.jsonl  synthetic.jsonl
datasets/b2b/v2/: dataset.jsonl  extraction.jsonl  synthetic.jsonl
datasets/b2c/v1/: dataset.jsonl  extraction.jsonl  sample.jsonl  synthetic-sample.jsonl  synthetic.jsonl
datasets/b2c/v2/: dataset.jsonl  extraction.jsonl  synthetic.jsonl
datasets/dialogs/: CHAT_0014.json  CHAT_0020.json  CHAT_0070.json  CHAT_0110.json  CHAT_0127.json
datasets/extraction/: analysis-report.md
datasets/extraction/analysis/: CHAT_0014.md  CHAT_0020.md  CHAT_0070.md  CHAT_0110.md  CHAT_0127.md
datasets/extraction/flat/: CHAT_0014.txt  CHAT_0020.txt  CHAT_0070.txt  CHAT_0110.txt  CHAT_0127.txt
datasets/extraction/scripts/: flatten_dialogs.py
datasets/scripts/: build_v2_patch.py  upload_langfuse_dataset.py  validate_dataset.py
devops/: README.md  docker-compose.yml
docs/: README.md  roadmap.md
docs/concept/: api-contracts.md  architecture.md  idea.md  integrations.md  vision.md
docs/sprints/sprint-01-infra-bootstrap/: README.md  summary.md
docs/sprints/sprint-02-mcp-tools-rag/: README.md  summary.md
docs/sprints/sprint-03-agent-core/: README.md  summary.md
docs/sprints/sprint-04-api-stream-catalog/: README.md  summary.md
docs/sprints/sprint-05-web-widget/: README.md  summary.md
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: use-chat-stream.ts  use-persisted-session.ts
frontend/lib/: api.ts  config.ts  format.ts  prompts.ts  session.ts  sse-client.ts  stream-pacing.ts  types.ts
mcp_server/: README.md  pyproject.toml
mcp_server/mcp_server/: __init__.py  __main__.py  config.py  paths.py  server.py
mcp_server/mcp_server/data_access/: __init__.py  catalog.py  leads.py  payments.py  price_format.py
mcp_server/mcp_server/rag/: __init__.py  chunking.py  embeddings.py  indexer.py  retriever.py
mcp_server/mcp_server/tools/: __init__.py  list_b2c_products.py  payment.py  save_lead.py  search_knowledge_base.py
mcp_server/tests/: conftest.py  test_catalog.py  test_funnel_e2e.py  test_leads.py  test_payment.py  test_price_format.py  test_rag.py  test_server.py
(+59 files in other folders)
