[project]
name = "llmstart-agent-backend"
version = "0.1.0"
description = "LLMStart Agent Core API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.4.0",
    "llmstart-agent-mcp-server",
    "fastapi>=0.115.0",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langfuse>=3.15.0,<4.0.0",
    "langgraph>=1.2.4",
    "markdown>=3.10.2",
    "mcp>=1.27.2",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
llmstart-agent-mcp-server = { path = "../mcp_server" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "D203",
    "D213",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN201", "PLR2004", "D103", "INP001", "E402", "ANN401", "ARG002", "D102", "RUF001"]
"app/agent/prompts.py" = ["RUF001"]
"app/agent/react_runner.py" = ["C901", "PLR0912", "SIM102", "TC002"]
"app/agent/streaming_callbacks.py" = ["ARG002", "ANN401", "D102", "D107"]
"app/api/routes/**" = ["FAST001", "FAST002", "TC001"]
"app/api/schemas/**" = ["D102"]
"app/core/**" = ["D102"]
"app/factory.py" = ["TC002"]
"app/mcp_client/**" = ["TRY003", "EM101", "ANN401", "D102", "D107", "PLW0603"]
"app/observability/**" = ["PLC0415", "TRY300", "BLE001"]
"app/services/**" = ["D107", "TRY003", "EM101", "RSE102", "FBT001"]
"app/services/channel_formatter.py" = ["C901", "PLR0911", "PLR0912"]
"app/mcp_client/sync_tools.py" = ["E402"]
"tests/conftest.py" = ["D107"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["bleach.*", "markdown.*", "langfuse.*", "mcp_server.*", "chromadb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
