[project]
name = "llmstart-agent-bot"
version = "0.1.0"
description = "LLMStart Telegram bot (thin Core adapter)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "D203",
    "D213",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN201", "PLR2004", "INP001", "D103", "ARG001", "PYI034", "RUF001"]
"bot/handlers/**" = ["ANN201", "D103", "RUF001", "PLR2004"]
"bot/utils/messaging.py" = ["RUF001"]
"bot/api/core_client.py" = ["D107", "PLR2004", "TRY003", "EM101", "RUF001"]
"bot/config.py" = ["D102", "D401"]
"bot/services/session_store.py" = ["D107"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aiogram.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
