[project]
name = "llmstart-agent-mcp-server"
version = "0.1.0"
description = "LLMStart MCP tools server (RAG, catalog, leads, payment mocks)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.0",
    "email-validator>=2.2.0",
    "mcp>=1.12.0",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "D203",
    "D213",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN201", "PLR2004", "INP001", "PLC0415", "E501", "PT011", "B017", "D103", "ARG001", "D401", "PT017", "TRY003", "EM101"]
"mcp_server/server.py" = ["PLR0913"]
"mcp_server/tools/save_lead.py" = ["PLR0913"]
"mcp_server/rag/**" = ["PERF401", "D102", "D107", "D401"]
"mcp_server/data_access/catalog.py" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["chromadb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
